--- a/package.json
+++ b/package.json
@@ -37,5 +37,10 @@
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.0.0"
+	},
+	"dependencies": {
+		"@fontsource/manrope": "^5.2.5",
+		"@types/siema": "^1.4.11",
+		"siema": "^1.5.1"
 	}
 }
