--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 include:
   - ./frontend_app/docker-compose.yml
-  # - ./api_gateway/docker-compose.prod.yml
+  - ./api_gateway/docker-compose.yml
   # - ./auth_service/docker-compose.prod.yml
   # - ./quiz_service/docker-compose.prod.yml
   # - ./analytics_service/docker-compose.prod.yml
