--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,7 +1,7 @@
 include:
   - ./frontend_app/docker-compose.local.yml
   - ./api_gateway/docker-compose.local.yml
+  - ./quiz_service/docker-compose.local.yml
   # - ./auth_service/docker-compose.prod.yml
-  # - ./quiz_service/docker-compose.prod.yml
   # - ./analytics_service/docker-compose.prod.yml
   # - ./study_experience_service/docker-compose.prod.yml
