chore: fix Nest configurations

--- a/quiz_service/docker-compose.local.yml
+++ b/quiz_service/docker-compose.local.yml
@@ -20,7 +20,7 @@ services:
     
     networks:
       - php_network
-      - services_network
+      # - services_network
 
     ports:
       - 80:80
