--- a/study_experience_service/docker-compose.yml
+++ b/study_experience_service/docker-compose.yml
@@ -6,10 +6,11 @@ services:
     
     container_name: study_experience_service
 
-    networks:
-      - services_network
+    # networks:
+    #   - services_network
     
     ports:
       - "80:80"
     
-    restart: unless-stopped 
+    volumes:
+      - .:/app
